basic console app added for testing - not yet working, it runs but it's not resolving the impl